--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
+    "@graphhopper/directions-api-js-client": "^8.0.7",
     "@turf/turf": "^7.2.0",
     "chart.js": "^4.5.0",
+    "env": "^0.0.2",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "react": "^19.1.0",
